--- a/about.css
+++ b/about.css
@@ -1,41 +1,93 @@
-.topnavbar {
-	background-color: #141414;
-	overflow: hidden;
+body {
+	background-image: url('background2.jpg');
 }
 
-.topnavbar a.button {
-	float: right;
-	color: #f2f2f2;
+.home {
+	grid-area: home;
+}
+
+.about {
+	grid-area: about;
+}
+
+.name {
+	grid-area: name;
+}
+
+.contact {
+	grid-area: contact;
+}
+
+.projects {
+	grid-area: projects;
+}
+
+.left {
+	grid-area: left;
+}
+
+.main {
+	grid-area: main;
+}
+
+.right {
+	grid-area: right;
+}
+
+.picture1 {
+	grid-area: picture1;
+}
+
+.picture2 {
+	grid-area: picture2;
+}
+
+.picture3 {
+	grid-area: picture3;
+}
+
+.footer {
+	grid-area: footer;
+	column-span: all;
+	position: fixed;
+	bottom: 0;
+	vertical-align: bottom;
+}
+
+.grid {
+	display: grid;
+	grid-template-areas:
+	'home about name contact projects'
+	'left main main main right'
+	'picture1 picture2 picture2 picture2 picture3'
+	'footer footer footer footer footer';
+	grid-gap: 20px;
+	padding: 10px;
 	text-align: center;
-	padding: 20px;
-	text-decoration: none;
-	font-size: 18px;
 }
 
-.topnavbar a.button:hover {
-	background-color: #4CAF50;
-	color: white;
-	border-style: ridge;
-}
-
-.topnavbar a.name {
-	float: left;
+.grid > a {
+	font-size: 30px;
 	color: #f2f2f2;
-	text-align: center;
-	padding: 20px;
 	text-decoration: none;
-	font-size: 24px;
 }
 
-h1 {
-    color: #f2f2f2;
-    text-align: center;
+.grid > a.name {
+	font-size: 50px;
+	color: cadetblue;
 }
 
-p {
-    color: rgb(211, 92, 36);
-    font-family: cursive;
-    font-size: 14px;
-    padding-left: 50px;
-    padding-right: 50px;
+.grid > div {
+	font-size: 16px;
+	color: tomato;
+}
+
+.grid > div.footer {
+	font-size: xx-small;
+	color: whitesmoke;
+}
+
+.grid > div > img {
+	width: 256px;
+	border-radius: 10%;
 }
